day3/manifests/deploy-rolling-update.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-rollingupdate
spec:
  replicas: 3
  selector:
    matchLabels:
      app: nginx
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 1    # at most 1 pod can be down during update
      maxSurge: 1          # at most 1 extra pod above desired count
  template:
    metadata:
      labels:
        app: nginx
    spec:
      containers:
      - name: nginx
        image: nginx:1.27
        ports:
        - containerPort: 80
