day3/manifests/hpa-test-pod.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: my-app
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      app: my-app
  template:
    metadata:
      labels:
        app: my-app
    spec:
      containers:
      - name: app
        image: nginx:1.27
        ports:
        - containerPort: 80
        resources:
          requests:
            cpu: "100m"
            memory: "128Mi"
          limits:
            cpu: "500m"
            memory: "256Mi"
      - name: cpu-chaos
        image: busybox:1.36
        command:
        - /bin/sh
        - -c
        - |
          while true; do
            yes > /dev/null &
            yes > /dev/null &
            wait
          done
        resources:
          requests:
            cpu: "200m"
            memory: "32Mi"
          limits:
            cpu: "400m"
            memory: "64Mi"
