day3/manifests/pod-config-demo.yaml
apiVersion: v1
kind: Pod
metadata:
  name: config-demo
spec:
  containers:
  - name: demo
    image: busybox
    command: ["sh", "-c", "echo $WELCOME_MSG && echo API_KEY=$API_KEY && sleep 3600"]
