day3/manifests/service-externalname.yaml
apiVersion: v1
kind: Service
metadata:
  name: db
spec:
  type: ExternalName
  externalName: my-database.rds.amazonaws.com
