day3/manifests/netpol-deny-all-egress.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: deny-all-egress
spec:
  podSelector: {}   # applies to ALL pods in the namespace
  policyTypes:
  - Egress
  # no egress rules = deny all
