day3/manifests/netpol-deny-all-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: deny-all-ingress
spec:
  podSelector: {}   # applies to ALL pods in the namespace
  policyTypes:
  - Ingress
  # no ingress rules = deny all
